format html code

--- a/skeleton/server/source/resource/custom/views/Demos/d5.jrxml
+++ b/skeleton/server/source/resource/custom/views/Demos/d5.jrxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="6db7da9b-6516-4878-b1ea-c30895acb738">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports"
+              xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+              xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd"
+              name="report name" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="535"
+              leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20"
+              uuid="6db7da9b-6516-4878-b1ea-c30895acb738">
     <property name="ireport.zoom" value="1.0"/>
     <property name="ireport.x" value="0"/>
     <property name="ireport.y" value="0"/>
@@ -30,21 +35,24 @@
     <columnHeader>
         <band height="20" splitType="Stretch">
             <staticText>
-                <reportElement mode="Opaque" x="0" y="0" width="100" height="20" backcolor="#CCCCCC" uuid="04f84971-c1d6-4c74-bf74-14666543d6cb"/>
+                <reportElement mode="Opaque" x="0" y="0" width="100" height="20" backcolor="#CCCCCC"
+                               uuid="04f84971-c1d6-4c74-bf74-14666543d6cb"/>
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font isBold="true"/>
                 </textElement>
                 <text><![CDATA[Id]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="100" y="0" width="343" height="20" backcolor="#CCCCCC" uuid="4a82dcc3-cb8a-44e2-9c1b-00ae721131b6"/>
+                <reportElement mode="Opaque" x="100" y="0" width="343" height="20" backcolor="#CCCCCC"
+                               uuid="4a82dcc3-cb8a-44e2-9c1b-00ae721131b6"/>
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font isBold="true"/>
                 </textElement>
                 <text><![CDATA[Name]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="443" y="0" width="112" height="20" backcolor="#CCCCCC" uuid="cf577d87-280e-434d-a640-7e458d690d13"/>
+                <reportElement mode="Opaque" x="443" y="0" width="112" height="20" backcolor="#CCCCCC"
+                               uuid="cf577d87-280e-434d-a640-7e458d690d13"/>
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font isBold="true"/>
                 </textElement>
